# markdown-archiver

./: .pdm-python  README.md  pyproject.toml  s
src/mdar/: __main__.py  app.py
src/mdar.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
